--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -6,7 +6,7 @@
    * element that contains the map. */
   #map {
     margin: auto auto;
-    width: 70%;
+    width: 100%;
     height: 70%;
   }
   /* Optional: Makes the sample page fill the window. */
